--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "rxjs": "~6.6.0",
     "toastr": "^2.1.4",
     "tslib": "^2.3.0",
+    "typescript": "^4.3.5",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
