--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "currency-formatter": "^1.5.8",
     "jquery": "^3.6.0",
     "moment": "^2.29.1",
+    "ngx-toastr": "^14.1.3",
     "primeicons": "^4.1.0",
     "primeng": "^12.1.1",
     "rxjs": "~6.6.0",
