--- a/package.json
+++ b/package.json
@@ -18,13 +18,18 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@ngx-translate/core": "^13.0.0",
+    "angular-i18next": "^10.3.0",
+    "angular-imask": "^6.2.2",
     "angular-in-memory-web-api": "^0.11.0",
     "bootstrap": "^4.1.3",
     "chart.js": "^3.5.1",
     "currency-formatter": "^1.5.8",
+    "i18next": "^20.6.1",
     "jquery": "^3.6.0",
     "moment": "^2.29.1",
     "ngx-toastr": "^14.1.3",
+    "ngx-translate": "^0.0.1-security",
     "primeicons": "^4.1.0",
     "primeng": "^12.1.1",
     "rxjs": "~6.6.0",
